@@ -98,9 +98,10 @@ h4. Set variables
 Set variables are created using @Model#set_var@, @Model#set_var_array@ and 
 @Model#set_var_matrix@. Set variables represent sets, the domain that can be 
 specified for them are the greatest lower bound (GLB), least upper bound (LUB)
-and cardinality (which is optional). The bounds can be specified using either 
-ranges or other enumerations. The cardinality can only be specified with ranges 
-or as a single number, which is then used as the minimum cardinality.
+and cardinality (which is optional). The bounds can be specified using integers 
+(representing singleton bounds), ranges or other enumerations. The cardinality 
+can only be specified with ranges or as a single number, which is then used as
+the minimum cardinality.
 
 The greatest lower bound is the largest set of elements that are certain to be 
 in the set, the least upper bound is the smallest set of elements that might be
