@@ -2,6 +2,7 @@
 
 * [#19435] Fixed a bug causing inconsistencies during BAB-search. The bug stopped the send+more=money example from working correctly.
 * Fixed the "raw_bindings" and "sudoku-set" examples, which were broken by the 0.8.0 release.
+* Integers can now be used to specify singleton lower and upper bounds when creating set variables. 
 
 == Version 0.8.0
 This release makes the jump from using Gecode 1.3.1 to using Gecode 2.1.1 . 
